--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,13 @@
             <artifactId>selenium-java</artifactId>
             <version>4.13.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.10.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
